// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatMessage /> renders message from current user correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-61 ChatMessage-messageWrappperFromMe-62"
>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation2-71 MuiPaper-rounded-68 ChatMessage-message-63 ChatMessage-messageFromMe-64"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      Harry Potter
    </span>
    <p
      className="MuiTypography-root-94 MuiTypography-body1-103"
    >
      Expecto Patronum!
      <span
        className="MuiTypography-root-94 MuiTypography-caption-104"
      >
        37 days ago
      </span>
    </p>
  </div>
  <div
    className="MuiAvatar-root-118 MuiAvatar-colorDefault-119"
    style={
      Object {
        "backgroundColor": "#009688",
      }
    }
  >
    HP
  </div>
</div>
`;

exports[`<ChatMessage /> renders message from other user correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-61"
>
  <div
    className="MuiAvatar-root-118 MuiAvatar-colorDefault-119"
    style={
      Object {
        "backgroundColor": "#e91e63",
      }
    }
  >
    DE
  </div>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation2-71 MuiPaper-rounded-68 ChatMessage-message-63"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      Dobby Elf
    </span>
    <p
      className="MuiTypography-root-94 MuiTypography-body1-103"
    >
      Dobby is a free elf!
      <span
        className="MuiTypography-root-94 MuiTypography-caption-104"
      >
        37 days ago
      </span>
    </p>
  </div>
</div>
`;

exports[`<ChatMessage /> renders status message correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-61 ChatMessage-statusMessage-65"
>
  <p
    className="MuiTypography-root-94 MuiTypography-body1-103 ChatMessage-statusMessageUser-66"
    style={
      Object {
        "color": "#009688",
      }
    }
  >
    Harry Potter
  </p>
   
  <span
    className="MuiTypography-root-94 MuiTypography-caption-104"
  >
    joined
     
    37 days ago
  </span>
</div>
`;
